@@ -1,5 +1,5 @@
 QPKG_NAME="SortMyQPKGs"
-QPKG_VER="230227"
+QPKG_VER="230503"
 QPKG_AUTHOR="OneCD"
 QPKG_RC_NUM="500"
 QPKG_SERVICE_PROGRAM="sortmyqpkgs.sh"
